--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,6 @@
-/* You can add global styles to this file, and also import other style files */
+.btn-margin-left {
+    margin-left: 10px;
+}
+.btn-margin-right {
+    margin-right: 10px;
+}
